--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,8 +1,16 @@
 #header { 
-  background-color: green;
+  background-color: #303e49;
+  text-align: center;
+  position: absolute;
+  width: 100%;
   height: 350px;
-  width: 100%
-  z-index: auto;
+  line-height: 50px;
+  top: 0;
+  left: 0;
+}
+
+#image-section{
+  margin-top: 30px;
 }
 
 .header-image{
@@ -12,9 +20,13 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
+  border: 2px solid #718ca1;
 }
 
 .header-text{
   display: block;
   text-align: center;
+  font-family: "Open Sans", sans-serif;
+  color: white;
+  font-size: 1.5rem;
 }
