--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,13 +1,17 @@
+/*header section*/
+
 #header { 
   background-color: #303e49;
   text-align: center;
   position: absolute;
   width: 100%;
-  height: 350px;
+  height: 50%;
   line-height: 50px;
   top: 0;
   left: 0;
+
 }
+
 
 #image-section{
   margin-top: 30px;
@@ -29,4 +33,66 @@
   font-family: "Open Sans", sans-serif;
   color: white;
   font-size: 1.5rem;
+}
+
+p {
+  color: black;
+  font-size: 18px;
+}
+
+/*timeline section*/
+
+.timeline{
+  position: relative;
+  width: 400px;
+  height: 350px;
+  line-height: 50px;
+  display: inline-block;
+  top: 350px;
+}
+
+.cd-timeline-content {
+    position: relative;
+    margin-left: 60px;
+    background: white;
+    border-radius: 0.25em;
+    padding: 1em;
+    box-shadow: 0 3px 0 #d7e4ed;
+}
+
+
+/*embedded tweets*/
+
+blockquote.twitter-tweet {
+  display: inline-block;
+  font-family: "Helvetica Neue", Roboto, "Segoe UI", Calibri, sans-serif;
+  font-size: 12px;
+  font-weight: bold;
+  line-height: 16px;
+  border-color: #eee #ddd #bbb;
+  border-radius: 5px;
+  border-style: solid;
+  border-width: 1px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15);
+  margin: 10px 5px;
+  padding: 0 16px 16px 16px;
+  max-width: 468px;
+}
+
+blockquote.twitter-tweet p {
+  font-size: 16px;
+  font-weight: normal;
+  line-height: 20px;
+}
+
+blockquote.twitter-tweet a {
+  color: inherit;
+  font-weight: normal;
+  text-decoration: none;
+  outline: 0 none;
+}
+
+blockquote.twitter-tweet a:hover,
+blockquote.twitter-tweet a:focus {
+  text-decoration: underline;
 }
