--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -4,15 +4,18 @@ favicon{
   border-radius: 100%
 }
 
+html, body{
+  margin: 0;
+  padding: 0;
+}
+
 #header { 
   background-color: #303e49;
   text-align: center;
-  position: absolute;
-  width: 100%;
-  height: 50%;
+  /*position: absolute;*/
+ /* width: 100%;*/
+  height: 350px;
   line-height: 50px;
-  top: 0;
-  left: 0;
 
 }
 
@@ -24,9 +27,6 @@ favicon{
   font-size: 1.5rem;
 }
 
-#image-section{
-  margin-top: 30px;
-}
 
 .header-image{
   height: 200px;
@@ -35,6 +35,10 @@ favicon{
   display: block;
   margin: auto;
   border: 2px solid #718ca1;
+}
+
+#image-section{
+  padding: 40px;
 }
 
 
@@ -51,27 +55,47 @@ favicon{
 
 .float-left {
   float: left;
+  margin-left: 50px;
 }
 
 .float-right{
   float: right;
+  margin-right: 50px;
 }
 .cd-timeline-content {
     position: relative;
-    margin: auto;
     background: white;
     border-radius: 0.25em;
     padding: 1em;
-    box-shadow: 0 3px 0 #d7e4ed;
     border: 1px solid blue;
     /*box-sizing: border-box;*/
  /*   float: left;*/
     top: 350px;
     width: 600px;
-    height: 350px;
+    height: 300px;
     line-height: 50px;
 }
 
+
+
+/* timeline vertical line */
+
+#cd-timeline {
+  position: relative;
+  padding: 2em 0;
+  margin-top: 2em;
+  margin-bottom: 2em;
+}
+#cd-timeline::before {
+  /* this is the vertical line */
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 18px;
+  height: 100%;
+  width: 4px;
+  background: #d7e4ed;
+}
 
 /*embedded tweets*/
 
