--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,25 +1,20 @@
-/*header section*/
-
-favicon{
-  border-radius: 100%
-}
+/* Primary style */
 
 html, body{
   margin: 0;
   padding: 0;
 }
 
+/* Header section */
+
 #header { 
   background-color: #303e49;
   text-align: center;
-  /*position: absolute;*/
- /* width: 100%;*/
   height: 350px;
   line-height: 50px;
-
 }
 
-.header-text{
+header h1 {
   display: block;
   text-align: center;
   font-family: "Open Sans", sans-serif;
@@ -27,8 +22,7 @@ html, body{
   font-size: 1.5rem;
 }
 
-
-.header-image{
+header img {
   height: 200px;
   width: 200px;
   border-radius: 100%;
@@ -37,7 +31,7 @@ html, body{
   border: 2px solid #718ca1;
 }
 
-#image-section{
+#image-section {
   padding: 40px;
 }
 
