--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -90,9 +90,9 @@ header img {
 }
 
 .cd-timeline-img {
-  position: absolute;
-  top: 0;
-  left: 0;
+  position: relative;
+  left: 50%;
+  margin-left: -10px;
   width: 40px;
   height: 40px;
   border-radius: 50%;
@@ -105,7 +105,7 @@ header img {
   height: 24px;
   position: relative;
   left: 50%;
-  top: 50%;
+  top: 26%;
   margin-left: -12px;
   margin-top: -12px;
 }
@@ -114,6 +114,99 @@ header img {
   background-color: #8b72cf;
 }
 
+
+.cd-timeline-content{
+  position: relative;
+  margin-left: 60px;
+  background: white;
+  border-radius: 0.25em;
+  padding: 1em;
+}
+
+.cd-timeline-content::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/*left off here*/
+
+.cd-timeline-content h2 {
+  color: #303e49;
+  font-size: 1em;
+}
+
+/*delete if needed*/
+
+/*.cd-timeline-content p {
+  margin: 1em 0;
+  line-height: 1.6;
+  background: #acb7c0;
+  color: white;
+  border-radius: 0.25em;
+}*/
+
+.cd-timeline-content .cd-read-more {
+  float: right;
+  padding: .8em 1em;
+}
+
+.cd-timeline-content .cd-read-more, .cd-timeline-content .cd-date {
+  display: inline-block;
+}
+
+.no-touch .cd-timeline-content .cd-read-more::hover {
+  background-color: #bac4cb;
+}
+
+.cd-timeline-content .cd-date{
+    float: left;
+    padding: .8em 0;
+    opacity: .7;
+}
+
+/*left off here*/
+
+.cd-timeline-content::before{
+  content: " ";
+  position: absolute;
+  top: 16px;
+  right: 100%;
+  height: 0;
+  width: 0;
+  border: 7px solid tranparent;
+  border-right: 7px solid white;
+
+}
+
+
+  #cd-timeline::before {
+    left: 50%;
+    margin-left: -2px;
+  }
+
+
+
+/*Timeline Content Floats */
+
+.cd-timeline-block:nth-child(even) .cd-timeline-content {
+  float: right;
+}
+.cd-timeline-block:nth-child(even) .cd-timeline-content::before {
+  top: 24px;
+  left: auto;
+  right: 100%;
+  border-color: transparent;
+  border-right-color: white;
+}
+.cd-timeline-block:nth-child(even) .cd-timeline-content .cd-read-more {
+  float: right;
+}
+.cd-timeline-block:nth-child(even) .cd-timeline-content .cd-date {
+  left: auto;
+  right: 122%;
+  text-align: right;
+}
 
 
 
@@ -152,4 +245,36 @@ blockquote.twitter-tweet a:hover,
 blockquote.twitter-tweet a:focus {
   text-decoration: underline;
 }
+
+/**** Footer ****/
+
+footer {
+  height: 100px;
+  background-color: #303e49; 
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
